--- a/index.html
+++ b/index.html
@@ -33,6 +33,42 @@
   </header>
   <!-- END HEADER SECTION -->
 
+  <!-- MAIN SECTION -->
+  <main>
+    <section class="section-about">
+      <div class="u-center-text u-margin-bottom-big">
+        <h2 class="heading-secondary">
+          Exciting tours for adventurous people
+        </h2>
+      </div> <!-- /.u-center-text -->
+
+      <div class="row">
+        <div class="col-1-of-2">
+          <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+          <p class="paragraph">
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi perspiciatis deleniti ab fuga id voluptas quam, ad rerum, provident reiciendis sequi natus quibusdam, blanditiis, inventore necessitatibus. Porro eveniet, odit officiis.
+          </p>
+
+          <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+          <p class="paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ratione alias libero a velit voluptatem tempore omnis.
+          </p>
+
+          <a href="#" class="btn-text">Learn more &rarr;</a>
+        </div> <!-- /.col-1-of-2 -->
+
+        <div class="col-1-of-2">
+          <div class="composition">
+            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+          </div>
+        </div> <!-- /.col-1-of-2 -->
+      </div> <!-- /.row -->
+    </section>
+  </main>
+  <!-- END MAIN SECTION -->
+
 </body>
 
 </html>
