--- a/index.html
+++ b/index.html
@@ -69,6 +69,191 @@
   </main>
   <!-- END MAIN SECTION -->
 
+  <!-- SECTION FEATURES -->
+  <section class="section-features">
+    <div class="row">
+      <div class="col-1-of-4">
+        <div class="feature-box">
+          <i class="feature-box__icon icon-basic-world"></i>
+
+          <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+
+          <p class="feature-box__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ratione alias libero.
+          </p>
+        </div> <!-- /.feature-box -->
+      </div> <!-- /.col-1-of-4 -->
+
+      <div class="col-1-of-4">
+        <div class="feature-box">
+          <i class="feature-box__icon icon-basic-compass"></i>
+
+          <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+
+          <p class="feature-box__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ratione alias libero.
+          </p>
+        </div> <!-- /.feature-box -->
+      </div> <!-- /.col-1-of-4 -->
+
+      <div class="col-1-of-4">
+        <div class="feature-box">
+          <i class="feature-box__icon icon-basic-map"></i>
+
+          <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+
+          <p class="feature-box__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ratione alias libero.
+          </p>
+        </div> <!-- /.feature-box -->
+      </div> <!-- /.col-1-of-4 -->
+
+      <div class="col-1-of-4">
+        <div class="feature-box">
+          <i class="feature-box__icon icon-basic-heart"></i>
+
+          <h3 class="heading-tertiary u-margin-bottom-small">Live healthy life</h3>
+
+          <p class="feature-box__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ratione alias libero.
+          </p>
+        </div> <!-- /.feature-box -->
+      </div> <!-- /.col-1-of-4 -->
+    </div> <!-- /.row -->
+  </section>
+  <!-- END SECTION FEATURES -->
+
+  <!-- SECTION TOURS -->
+  <section class="section-tours">
+    <div class="u-center-text">
+      <h2 class="heading-secondary u-margin-bottom-big">
+        Most popular tours
+      </h2>
+
+      <div class="row">
+        <!-- Card 1 -->
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--1">
+                <!-- Non-breaking space and non-collapsing -->
+                &nbsp;
+              </div> <!-- /.card__picture -->
+
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--1">
+                  The sea explorer
+                </span>
+              </h4>
+
+              <div class="card__details">
+                <ul>
+                  <li>3 days tour</li>
+                  <li>Up to 30 people</li>
+                  <li>2 tour guides</li>
+                  <li>Sleep in cozy hotels</li>
+                  <li>Difficulty: easy</li>
+                </ul>
+              </div> <!-- /.card__details -->
+            </div> <!-- /.card__side -->
+
+            <div class="card__side card__side--back card__side--back-1">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">€297</p>
+                </div>
+
+                <a href="" class="btn btn--white">Book now</a>
+              </div> <!-- /.card__cta -->
+            </div> <!-- /.card__side -->
+          </div> <!-- /.card -->
+        </div> <!-- /.col-1-of-3 -->
+
+        <!-- Card 2 -->
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--2">
+                <!-- Non-breaking space and non-collapsing -->
+                &nbsp;
+              </div> <!-- /.card__picture -->
+
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--2">
+                  The forest hiker
+                </span>
+              </h4>
+
+              <div class="card__details">
+                <ul>
+                  <li>7 days tour</li>
+                  <li>Up to 40 people</li>
+                  <li>6 tour guides</li>
+                  <li>Sleep in provided tents</li>
+                  <li>Difficulty: medium</li>
+                </ul>
+              </div> <!-- /.card__details -->
+            </div> <!-- /.card__side -->
+
+            <div class="card__side card__side--back card__side--back-2">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">€497</p>
+                </div>
+
+                <a href="" class="btn btn--white">Book now</a>
+              </div> <!-- /.card__cta -->
+            </div> <!-- /.card__side -->
+          </div> <!-- /.card -->
+        </div> <!-- /.col-1-of-3 -->
+
+        <!-- Card 3 -->
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--3">
+                <!-- Non-breaking space and non-collapsing -->
+                &nbsp;
+              </div> <!-- /.card__picture -->
+
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--3">
+                  The snow adventurer
+                </span>
+              </h4>
+
+              <div class="card__details">
+                <ul>
+                  <li>5 days tour</li>
+                  <li>Up to 15 people</li>
+                  <li>3 tour guides</li>
+                  <li>Sleep in provided tents</li>
+                  <li>Difficulty: hard</li>
+                </ul>
+              </div> <!-- /.card__details -->
+            </div> <!-- /.card__side -->
+
+            <div class="card__side card__side--back card__side--back-3">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">€897</p>
+                </div>
+
+                <a href="" class="btn btn--white">Book now</a>
+              </div> <!-- /.card__cta -->
+            </div> <!-- /.card__side -->
+          </div> <!-- /.card -->
+        </div> <!-- /.col-1-of-3 -->
+      </div> <!-- /.row -->
+
+      <a href="" class="btn btn--green">Discover all tours</a>
+    </div> <!-- /.u-center-text -->
+  </section>
+  <!-- END SECTION TOURS -->
+
 </body>
 
 </html>
