--- a/index.html
+++ b/index.html
@@ -254,6 +254,73 @@
   </section>
   <!-- END SECTION TOURS -->
 
+  <!-- SECTION STORIES -->
+  <section class="section-stories">
+    <div class="bg-video">
+      <video class="bg-video__content" autoplay muted loop>
+        <source src="img/video.mp4" type="video/mp4">
+        <source src="img/video.webm" type="video/webm">
+        Your browser is not supported!
+      </video>
+    </div>
+
+    <div class="u-center-text">
+      <h2 class="heading-secondary u-margin-bottom-big">
+        We make people genuinely happy
+      </h2>
+    </div> <!-- /.u-center-text -->
+
+    <!-- Mary Smith story -->
+    <div class="row">
+      <div class="story">
+        <figure class="story__shape">
+          <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+          <figcaption class="story__caption">Mary Smith</figcaption>
+        </figure>
+
+        <div class="story__text">
+          <h2 class="heading-tertiary u-margin-bottom-small">
+            I had a best week ever with my family
+          </h2>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis illum placeat quos est. Quis repellat pariatur nulla aperiam fugit nemo vero, dolores quae autem similique dicta odit molestias atque voluptas.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nemo eos quisquam nisi veniam velit.
+          </p>
+        </div> <!-- /.story__text -->
+      </div> <!-- /.story -->
+    </div> <!-- /.row -->
+
+    <!-- Jack Wilson story -->
+    <div class="row">
+      <div class="story">
+        <figure class="story__shape">
+          <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+          <figcaption class="story__caption">Jack Wilson</figcaption>
+        </figure>
+
+        <div class="story__text">
+          <h2 class="heading-tertiary u-margin-bottom-small">
+            WOW! My life is completely different now
+          </h2>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis illum placeat quos est. Quis repellat pariatur nulla aperiam fugit nemo vero, dolores quae autem similique dicta odit molestias atque voluptas.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nemo eos quisquam nisi veniam velit.
+          </p>
+        </div> <!-- /.story__text -->
+      </div> <!-- /.story -->
+    </div> <!-- /.row -->
+
+    <div class="u-center-text">
+      <a href="#" class="btn-text">Read all stories &rarr;</a>
+    </div> <!-- /.u-center-text -->
+  </section>
+  <!-- END SECTION STORIES -->
+
+  <!-- SECTION BOOKING -->
+  <!-- END SECTION BOOKING -->
+
 </body>
 
 </html>
