section booking & footer

--- a/index.html
+++ b/index.html
@@ -319,7 +319,95 @@
   <!-- END SECTION STORIES -->
 
   <!-- SECTION BOOKING -->
+  <section class="section-book">
+    <div class="row">
+      <div class="book">
+        <div class="book__form">
+          <form action="#" class="form">
+            <div class="u-margin-bottom-medium">
+              <h2 class="heading-secondary">
+                Start booking now
+              </h2>
+            </div>
+
+            <!-- Full name -->
+            <div class="form__group">
+              <input type="text" id="name" class="form__input" placeholder="Full Name" required>
+              <label for="name" class="form__label">Full Name</label>
+            </div> <!-- /.form__group -->
+
+            <!-- Email address -->
+            <div class="form__group">
+              <input type="email" id="email" class="form__input" placeholder="Email Address" required>
+              <label for="email" class="form__label">Email address</label>
+            </div> <!-- /.form__group -->
+
+            <!-- Radio button -->
+            <div class="form__group u-margin-bottom-medium">
+              <div class="form__radio-group">
+                <input type="radio" class="form__radio-input" id="small" name="size">
+                <label for="small" class="form__radio-label">
+                  <span class="form__radio-button"></span>
+                  Small tour group
+                </label>
+              </div> <!-- /.form__radio-group -->
+
+              <div class="form__radio-group">
+                <input type="radio" class="form__radio-input" id="Large" name="size">
+                <label for="Large" class="form__radio-label">
+                  <span class="form__radio-button"></span>
+                  Large tour group
+                </label>
+              </div> <!-- /.form__radio-group -->
+            </div> <!-- /.form__group -->
+
+            <div class="form__group">
+              <button class="btn btn--green">Next step &rarr;</button>
+            </div> <!-- /.form__radio-group -->
+          </form>
+        </div> <!-- /.book__form -->
+      </div> <!-- /.book -->
+    </div> <!-- /.row -->
+  </section>
   <!-- END SECTION BOOKING -->
+
+  <footer class="footer">
+    <div class="footer__logo-box">
+      <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+    </div> <!-- /.footer__logo-box -->
+
+    <div class="row">
+      <div class="col-1-of-2">
+        <div class="footer__navigation">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Company</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Contact us</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Carrers</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Privacy</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Terms</a>
+            </li>
+          </ul>
+        </div>
+      </div> <!-- /.col-1-of-2 -->
+
+      <div class="col-1-of-2">
+        <p class="footer__copyright">
+          Built by <a href="https://github.com/Hamadrial/Natours" class="footer__link">Kiet Nguyen</a><br>
+          Designed by <a href="http://codingheroes.io/index.html" class="footer__link">Jonas Schmedtmann</a><br>
+          &copy; Copyright 2017
+        </p>
+      </div> <!-- /.col-1-of-2 -->
+    </div> <!-- /.row -->
+  </footer>
 
 </body>
 
