--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
   <title>Natours | Exciting tours for adventurous people</title>
+
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="js/script.js"></script>
 </head>
 
 <body>
@@ -28,23 +31,23 @@
     <nav class="navigation__nav">
       <ul class="navigation__list">
         <li class="navigation__item">
-          <a href="#section-about" class="navigation__link"><span>01</span>About Natours</a>
+          <a href="#" scroll-to=".section-about" scroll-speed="1500" scroll-offset="200" class="navigation__link"><span>01</span>About Natours</a>
         </li>
 
         <li class="navigation__item">
-          <a href="#features" class="navigation__link"><span>02</span>Your benefits</a>
+          <a href="#" scroll-to=".section-features" scroll-speed="1500" scroll-offset="150" class="navigation__link"><span>02</span>Your benefits</a>
         </li>
 
         <li class="navigation__item">
-          <a href="#tours" class="navigation__link"><span>03</span>Popular tours</a>
+          <a href="#" scroll-to=".section-tours" scroll-speed="1500" scroll-offset="180" class="navigation__link"><span>03</span>Popular tours</a>
         </li>
 
         <li class="navigation__item">
-          <a href="#stories" class="navigation__link"><span>04</span>Stories</a>
+          <a href="#" scroll-to=".section-stories" scroll-speed="1500" scroll-offset="120" class="navigation__link"><span>04</span>Stories</a>
         </li>
 
         <li class="navigation__item">
-          <a href="#book" class="navigation__link"><span>05</span>Book now</a>
+          <a href="#" scroll-to=".section-book" scroll-speed="1500" scroll-offset="120" class="navigation__link"><span>05</span>Book now</a>
         </li>
       </ul>
     </nav>
@@ -63,14 +66,14 @@
         <span class="heading-primary--sub">is where life happens</span>
       </h1> <!-- /.heading-primary -->
 
-      <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
+      <a href="#" scroll-to=".section-tours" scroll-speed="1500" scroll-offset="190" class="btn btn--white btn--animated">Discover our tours</a>
     </div> <!-- /.header__text-box -->
   </header>
   <!-- END HEADER SECTION -->
 
   <!-- MAIN SECTION -->
   <main>
-    <section class="section-about" id="section-about">
+    <section class="section-about">
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">
           Exciting tours for adventurous people
@@ -89,7 +92,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ratione alias libero a velit voluptatem tempore omnis.
           </p>
 
-          <a href="#" class="btn-text">Learn more &rarr;</a>
+          <a href="#" scroll-to=".section-tours" scroll-speed="1500" scroll-offset="180" class="btn-text">Learn more &rarr;</a>
         </div> <!-- /.col-1-of-2 -->
 
         <div class="col-1-of-2">
@@ -122,7 +125,7 @@
   <!-- END MAIN SECTION -->
 
   <!-- SECTION FEATURES -->
-  <section class="section-features" id="section-features">
+  <section class="section-features">
     <div class="row">
       <div class="col-1-of-4">
         <div class="feature-box">
@@ -176,7 +179,7 @@
   <!-- END SECTION FEATURES -->
 
   <!-- SECTION TOURS -->
-  <section class="section-tours" id="section-tours">
+  <section class="section-tours">
     <div class="u-center-text">
       <h2 class="heading-secondary u-margin-bottom-big">
         Most popular tours
@@ -487,7 +490,7 @@
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam velit quam nihil sapiente est officiis ipsum necessitatibus facere accusantium, nam eos quibusdam hic odio soluta veniam fugit cumque, fugiat quidem!
         </p>
 
-        <a href="#" class="btn btn--green">Book now</a>
+        <a href="#" scroll-to=".section-book" scroll-speed="1500" scroll-offset="120" class="btn btn--green">Book now</a>
       </div> <!-- /.popup__right -->
     </div> <!-- /.popup__content -->
   </div> <!-- /.popup -->
